syntax = "proto3";

package message;

import "google/api/annotations.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service MessageService {

    rpc CreateMessage(CreateRequest) returns (Message) {
        option (google.api.http) = {
            post: "/messages"
            body: "*"
        };
    }

    rpc ListMessage(FindRequest) returns (ListResponse) {
        option (google.api.http) = {
            get: "/messages"
        };
    }

    rpc GetMessage(GetRequest) returns (Message) {
        option (google.api.http) = {
            get: "/messages/{id}"
        };
    }

    rpc DeleteMessage(DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/messages/{id}"
        };
    }

    rpc PublishMessage(PublishMessageRequest) returns (PublishResponse) {
        option (google.api.http) = {
            post: "/messages/{id}/publish"
        };
    }

}

message Message {
    int64 id = 1;
    string uuid_v4 = 2;
    string app_id = 3;
    string topic = 4;
    google.protobuf.Timestamp created_at = 5;
    repeated PublishResponse publishes = 6;
}

message PublishResponse {
    int64 id = 1;
    int64 msg_id = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest {
    string uuid_v4 = 1;
    string app_id = 2;
    string topic = 3;
    bytes data = 4;
    bool emit = 5;
}


message FindRequest {
    int64 id = 1;
    string uuid_v4 = 2;
    string app_id = 3;
    string topic = 4;
    string created_from = 5;
    string created_to = 6;
    int64 limit = 7;
    int64 offset = 8;
    string order_by = 9;
}

message ListResponse {
    repeated Message messages = 1;
}

message GetRequest {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    bool success = 1;
}

message PublishMessageRequest {
    int64 id = 1;
}
